# adeline

./: .dockerignore  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  tox.ini  venv.source
.github/workflows/: ci.yaml
app/: main.py
docker/: Dockerfile  docker-entrypoint.sh
src/adeline/: __init__.py  api.py  main.py  webapp.py
src/adeline/persistence/: models.py  schema.py
tests/: conftest.py  test_adeline.py  test_main.py
