[tool.poetry]
name = "adeline"
version = "0.1.0"
description = "Communications Hill Neighborhood Association Website"
authors = ["Jon Bringhurst <jon@bringhurst.org>"]
packages = [
    { include = "adeline", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.910"
pytest-cov = "^3.0.0"
isort = "^5.9.3"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
